# Nanogear

./: AUTHORS  CMakeLists.txt  NEWS  NOTES  README.md
CMake/Modules/: NanogearVersion.cmake
Documentation/: CMakeLists.txt  Doxyfile.in  Nanogear.txt  README  qt-na-web-pt.txt
Examples/: CMakeLists.txt
Examples/directory/: CMakeLists.txt  main.cpp
Examples/forms/: CMakeLists.txt  main.cpp
Examples/simple/: CMakeLists.txt
Examples/wiki/: CMakeLists.txt  main.cpp
Scripts/: genheaders.py
Source/: CMakeLists.txt
Source/Http/: Application  CMakeLists.txt  ClientInfo  DirectoryResource  Metadata  Method  MimeType  Preference  PreferenceList  Protocol  Representation  Request  Resource  Response  Router  Server  Status  Uniform  application.h  clientinfo.h  component.h  connector.h  directoryresource.cpp  directoryresource.h  metadata.h  method.cpp  method.h  mimetype.cpp  mimetype.h  preference.h  preferencelist.h  protocol.cpp  protocol.h  representation.cpp  representation.h  request.h  resource.cpp  resource.h  response.h  router.cpp  (+5 more)
Source/Server/: CMakeLists.txt
Source/Server/ihttp/: CMakeLists.txt  NHTTPServer  nhttpserver.cpp  nhttpserver.h  nutility.h
Source/Ui/: CMakeLists.txt  Image  Model  Style  Text  Widget  model.h  style.h  text.h  widget.h
